tests/error/modifier_errors/flags_nested_combined_outer.err
Error: Dagger & control constraint violation (at $FILE:16:12)
   | 
14 |     with control(ctrl), dagger:
15 |         with power(2):
16 |             foo(q)
   |             ^^^^^^ This function cannot be called in a unitary context

Help: Consider adding the flag `(dagger=True, control=True)` to the decorator of
the function `foo`

Guppy compilation failed due to 1 previous error
